gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail3882.d
version https://git-lfs.github.com/spec/v1
oid sha256:10a88abdcab8e8ee5ed896f42f633a433dd12c05bba4e79f981378f2f71ebfc4
size 831
